# FastAPI-API-Testing

./: .gitignore  README.md  pyproject.toml  test.db
src/app/: main.py
tests/: conftest.py  test_app.py
